--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,21 @@
 
-.frontPage__room {
-  width: 300px;
-  background-color: transparent; }
-
-.frontPage__title {
-  color: #ffa000; }
+.frontPage {
+  max-width: 1366px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+  .frontPage__room {
+    width: 300px;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1rem 2rem; }
+  .frontPage__title {
+    color: #ffa000; }
+  .frontPage__description {
+    text-align: center; }
 
 
 
@@ -92,12 +103,23 @@ h2 {
     font-size: 2rem;
     line-height: 3rem; } }
 
-.frontPage__room {
-  width: 300px;
-  background-color: transparent; }
-
-.frontPage__title {
-  color: #ffa000; }
+.frontPage {
+  max-width: 1366px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+  .frontPage__room {
+    width: 300px;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1rem 2rem; }
+  .frontPage__title {
+    color: #ffa000; }
+  .frontPage__description {
+    text-align: center; }
 
 .btn {
   background-color: #ffa000;
@@ -110,7 +132,8 @@ h2 {
   text-align: center;
   color: #090909;
   font-size: 1.25rem;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  margin: 1rem 0; }
 
 * {
   box-sizing: border-box; }
@@ -129,4 +152,5 @@ body {
   text-align: center;
   color: #090909;
   font-size: 1.25rem;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  margin: 1rem 0; }
