finished styling basic version of button

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,21 @@ h2 {
   text-transform: uppercase;
   margin: 1rem 0; }
 
+.btn::after {
+  content: '';
+  display: block;
+  position: relative;
+  border: 2px solid #fefefe;
+  width: 198px;
+  height: 48px;
+  left: 3px;
+  top: -56px;
+  transition: left 300ms ease-out, top 300ms ease-out; }
+
+.btn:focus::after, .btn:hover::after {
+  left: 0;
+  top: -50px; }
+
 * {
   box-sizing: border-box; }
 
@@ -154,3 +169,18 @@ body {
   font-size: 1.25rem;
   text-transform: uppercase;
   margin: 1rem 0; }
+
+.btn::after {
+  content: '';
+  display: block;
+  position: relative;
+  border: 2px solid #fefefe;
+  width: 198px;
+  height: 48px;
+  left: 3px;
+  top: -56px;
+  transition: left 300ms ease-out, top 300ms ease-out; }
+
+.btn:focus::after, .btn:hover::after {
+  left: 0;
+  top: -50px; }
