--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,3 @@
-
-.frontPage {
-  max-width: 1366px;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center; }
-  .frontPage__room {
-    width: 300px;
-    background-color: transparent;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 1rem 2rem; }
-  .frontPage__title {
-    color: #ffa000; }
-  .frontPage__description {
-    text-align: center; }
-
-
-
 /* 
   Theme Name: Testing
   Author: Borys Strzelewicz
@@ -80,22 +59,24 @@ body {
   color: #fefefe;
   font-family: 'Roboto', 'Arial', sans-serif; }
 
-* {
+*, p {
   font-size: 16px;
   font-family: 'Roboto', 'Arial', sans-serif; }
 
 h1 {
   font-size: 2.5rem;
-  line-height: 3.75rem; }
+  line-height: 3.75rem;
+  font-weight: bold; }
 
 h2 {
   font-size: 1.5rem;
-  line-height: 2.25rem; }
+  line-height: 2.25rem;
+  font-weight: bold; }
 
 @media (min-width: 1366px) {
-  * {
-    font-size: 1.5rem;
-    line-height: 2.25rem; }
+  *, p {
+    font-size: 1.25rem;
+    line-height: 1.725rem; }
   h1 {
     font-size: 3rem;
     line-height: 4.5rem; }
@@ -109,19 +90,65 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center; }
+  .frontPage__imageContainer {
+    background-color: #fefefe;
+    width: 300px;
+    height: 200px;
+    padding: 1rem 2rem; }
+  .frontPage__imageContainer::after {
+    content: '';
+    width: 300px;
+    height: 200px;
+    position: absolute;
+    background-color: #ffa000;
+    z-index: -1;
+    margin-top: -180px;
+    margin-left: -38px; }
+  .frontPage__image {
+    width: 100%;
+    height: 100%; }
   .frontPage__room {
     width: 300px;
     background-color: transparent;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 1rem 2rem; }
+    margin: 1rem 2rem;
+    text-decoration: none;
+    color: #fefefe; }
   .frontPage__title {
-    color: #ffa000; }
+    color: #ffa000;
+    margin-bottom: .5rem;
+    margin-top: 1rem; }
   .frontPage__description {
-    text-align: center; }
+    text-align: center;
+    margin: 0; }
 
-.btn {
+.single {
+  max-width: 500px;
+  margin: 0 auto; }
+  .single__title {
+    text-align: center;
+    margin-bottom: 4rem; }
+  .single__title::after {
+    content: '';
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 50px 300px 0 0;
+    border-color: #ffa000 transparent transparent transparent;
+    position: absolute;
+    left: calc(50% - 150px);
+    margin-top: 70px; }
+  .single__content {
+    margin-bottom: 1rem; }
+  .single__details {
+    margin: .5rem 0; }
+  .single__subtitle {
+    font-weight: bold;
+    color: #ffa000; }
+
+[class*="btn"] {
   background-color: #ffa000;
   display: block;
   text-decoration: none;
@@ -132,21 +159,25 @@ h2 {
   text-align: center;
   color: #090909;
   font-size: 1.25rem;
-  text-transform: uppercase;
-  margin: 1rem 0; }
+  text-transform: uppercase; }
 
-.btn::after {
+[class*="btn"]::after {
   content: '';
   display: block;
   position: relative;
-  border: 2px solid #fefefe;
   width: 198px;
   height: 48px;
   left: 3px;
   top: -56px;
   transition: left 300ms ease-out, top 300ms ease-out; }
 
-.btn:focus::after, .btn:hover::after {
+.btn--white::after {
+  border: 2px solid #fefefe; }
+
+.btn--black::after {
+  border: 2px solid #000; }
+
+[class*="btn"]:focus::after, [class*="btn"]:hover::after {
   left: 0;
   top: -50px; }
 
@@ -155,32 +186,3 @@ h2 {
 
 body {
   background-color: #000; }
-
-.btn {
-  background-color: #ffa000;
-  display: block;
-  text-decoration: none;
-  color: #fefefe;
-  width: 200px;
-  height: 48px;
-  line-height: 48px;
-  text-align: center;
-  color: #090909;
-  font-size: 1.25rem;
-  text-transform: uppercase;
-  margin: 1rem 0; }
-
-.btn::after {
-  content: '';
-  display: block;
-  position: relative;
-  border: 2px solid #fefefe;
-  width: 198px;
-  height: 48px;
-  left: 3px;
-  top: -56px;
-  transition: left 300ms ease-out, top 300ms ease-out; }
-
-.btn:focus::after, .btn:hover::after {
-  left: 0;
-  top: -50px; }
