--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -18,7 +18,7 @@ body {
   font-family: 'Roboto', 'Arial', sans-serif;
 }
 
-* {
+*, p {
   font-size: 16px;
   font-family: 'Roboto', 'Arial', sans-serif;
 }
@@ -26,17 +26,19 @@ body {
 h1 {
   font-size: 2.5rem;
   line-height: 3.75rem;
+  font-weight: bold;
 }
 
 h2 {
   font-size: 1.5rem;
   line-height: 2.25rem;
+  font-weight: bold;
 }
 
 @media(min-width: 1366px) {
-  * {
-    font-size: 1.5rem;
-    line-height: 2.25rem;
+  *, p {
+    font-size: 1.25rem;
+    line-height: 1.725rem;
   }
 
   h1 {
