--- a/scss/front-page.scss
+++ b/scss/front-page.scss
@@ -6,6 +6,29 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  &__imageContainer {
+    background-color: $white;
+    width: 300px;
+    height: 200px;
+    padding: 1rem 2rem;
+  }
+
+  &__imageContainer::after {
+    content: '';
+    width: 300px;
+    height: 200px;
+    position: absolute;
+    background-color: $main-yellow;
+    z-index: -1;
+    margin-top: -180px;
+    margin-left: -38px;
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
+  }
   
   &__room {
     width: 300px;
@@ -14,13 +37,18 @@
     flex-direction: column;
     align-items: center;
     margin: 1rem 2rem;
+    text-decoration: none;
+    color: $white;
   }
 
   &__title {
     color: $main-yellow;
+    margin-bottom: .5rem;
+    margin-top: 1rem;
   }
 
   &__description {
     text-align: center;
+    margin: 0;
   }
 }
